Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/staticQualifiedNew/StaticQualifiedNew.out
StaticQualifiedNew.java:13:11: compiler.err.qualified.new.of.static.class: p2.X.M
1 error
